2006-06-26  Derek Price  <derek@ximbiot.com>

	* configure.in: Define POPEN_BINARY_FLAG.

2006-06-24  Jim Hyslop <jhyslop@dreampossible.ca>

	* NEWS: Added note about bug fix to test for invalid characters in
	tags.

2006-06-23  Larry Jones  <lawrence.jones@ugs.com>

	* configure: Regenerated.

2006-06-23  Mark D. Baushke  <mdb@gnu.org>

	* configure: Regenerated.

2006-06-22  Mark D. Baushke  <mdb@gnu.org>

	* config.h.in: Update from gnulib.
	* configure: Regenerated.

2006-06-22  Jim Hyslop <jhyslop@dreampossible.ca>

	* cvsnt.dsp: Add Windows-specific implementation of strtoimax()
	and strtoumax()
	* cvsnt.dep, cvsnt.mak: regenerated from cvsnt.dsp changes

2006-06-19  Mark D. Baushke  <mdb@gnu.org>

	* Makefile.in, aclocal.m4, config.h.in, configure: Regenerated.

2006-06-19  Derek Price  <derek@ximbiot.com>

	* BUGS: Note abort of `cvs log' under Alpha Linux 2.2.20.

2006-06-14  Jim Hyslop <jhyslop@dreampossible.ca>

	* cvsnt.dsp: Add Windows-specific version of canonicalize.c
	* cvsnt.dep, cvsnt.mak: Regenerated from cvsnt.dsp changes

2006-06-11  Jim Hyslop <jhyslop@dreampossible.ca>

	* cvsnt.dsp: Add missing files to Visual Studio workspace
	* cvsnt.dep, cvsnt.mak: Regenerated from cvsnt.dsp changes

2006-06-08  Derek Price  <derek@ximbiot.com>

	* configure.in: Substitute DEFAULT_SIGN_TEMPLATE and
	DEFAULT_SIGN_TEXTMODE in addition to #defining.

2006-06-07  Derek Price  <derek@ximbiot.com>

	* BUGS: Remove warning about log_accum.pl.

2006-05-25  Derek Price  <derek@ximbiot.com>

	* configure.in: Prefer `remsh' to `rsh' when autodetecting and comment
	rationale.

2006-05-22  Derek Price  <derek@ximbiot.com>

	* maint-aux/gnulib-update: s/SIGINT/2/ for Solaris 9.

2006-05-22  Mark D. Baushke  <mdb@gnu.org>

	* configure: Regenerated.

2006-05-19  Mark D. Baushke  <mdb@gnu.org>

	* build-aux/config.rpath: Update via gnulib-update.

2006-05-17  Mark D. Baushke  <mdb@gnu.org>

	* NEWS: Remove wording about backed out change for added files.