@@ -1,3 +1,8 @@
+2006-06-24  Mark D. Baushke  <mdb@gnu.org>
+
+	* rcs.c (RCS_check_tag): Revert last change.
+	* sanity.sh (tag-valid): Delete test.
+
 2006-06-26  Derek Price  <derek@ximbiot.com>
 
 	* sign.c (gen_signature), verify.c (verify_signature): Use new
