@@ -1,3 +1,7 @@
+2006-06-26  Mark D. Baushke  <mdb@gnu.org>
+
+	* NEWS: Revert last change about valid characters in tag testing.
+
 2006-06-26  Derek Price  <derek@ximbiot.com>
 
 	* configure.in: Define POPEN_BINARY_FLAG.
